# research-agent-openai-sdk

./: .env.example  README.md  agent.py  banner.py  main.py  pyproject.toml
labs/: lab-01.ipynb
notebooks/: 01_agents_sdk_basics.ipynb
