[project]
name = "agent-sdk-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "arxiv>=2.4.1",
    "ddgs>=9.13.0",
    "duckduckgo-search>=8.1.1",
    "openai>=2.30.0",
    "openai-agents>=0.13.5",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "wikipedia-api>=0.14.0",
]
